kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskflow-service
  namespace: taskflow
  labels:
    app: taskflow
spec:
  selector:
    app: taskflow
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
